# bazel-lazy-download-repro

./: BUILD.bazel  MODULE.bazel  README.md
build_rules/: consumer.bzl  image.bzl  providers.bzl
download_in_a_build_action/: BUILD.bazel  download_lazy.bzl
repository_rules/: download.bzl  trampolines.bzl
tools/downloader/: BUILD.bazel  MODULE.bazel  bootstrap.bzl  downloader.bzl  downloader.go  go.mod
