load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load("//build_rules:image.bzl", "image")
load("//build_rules:consumer.bzl", "consumer")

# This rule references the downloaded file from the external repository,
# but it only passes it on in a provider.
# We would like to avoid having to donwload the external file unless the
# consumer rule is built.
image(
    name = "example_image",
    base_image = "@trampolines//:example_100mib_data.bin",
    layers = [],
)

# The consumer rule reads the provider from the image rule,
# and creates a symlink to the base image file.
# At this point, Bazel should definitely have downloaded the external file.
consumer(
    name = "example_consumer",
    image = ":example_image",
    tags = ["manual"],
)

### MOVE THIS SOMEWHERE SANE

bool_flag(
    name = "materialize_blobs",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "materialize_blobs_enabled",
    flag_values = {
        ":materialize_blobs": "true",
    },
    visibility = ["//visibility:public"],
)