module(
    name = "downloader",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.58.3")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Known to exist since it is instantiated by rules_go itself.
use_repo(
    go_sdk,
    "go_host_compatible_sdk_label",
)

bootstrap = use_repo_rule("//:bootstrap.bzl", "bootstrap")

bootstrap(
    name = "downloader_tool",
    go_mod = "//:go.mod",
    go_sum = "//:go.sum",
    tool_srcs = ["//:tool_srcs"],
)
